# diploma-frontend/swagger/swagger.yaml
@@ -3,6 +3,7 @@ info:
   title: Swagger Diploma Project
   version: 1.0.0
 tags:
+  - name: auth
   - name: catalog
   - name: basket
   - name: order
@@ -10,6 +11,66 @@ tags:
   - name: profile
   - name: tags
 paths:
+  /sign-in:
+    post:
+      tags:
+        - auth
+      description: 'sign in'
+      parameters:
+        - name: username
+          in: query
+          description: username
+          required: true
+          schema:
+            type: string
+        - name: password
+          in: query
+          description: password
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: successful operation
+
+
+  /sign-up:
+    post:
+      tags:
+        - auth
+      description: 'sign up'
+      parameters:
+        - name: name
+          in: query
+          description: name
+          required: true
+          schema:
+            type: string
+        - name: username
+          in: query
+          description: username
+          required: true
+          schema:
+            type: string
+        - name: password
+          in: query
+          description: password
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: successful operation
+
+  /sign-out:
+    post:
+      tags:
+        - auth
+      description: 'sign out'
+      responses:
+        '200':
+          description: successful operation
+
   /categories:
     get:
       tags:
@@ -82,6 +143,15 @@ paths:
             enum:
               - dec
               - inc
+        - name: tags
+          in: query
+          description: page
+          required: false
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/Tag'
+
         - name: limit
           in: query
           required: false
@@ -186,7 +256,7 @@ paths:
           description: product id
           required: true
           schema:
-            type: string
+            type: number
       responses:
         '200':
           description: successful operation
@@ -316,7 +386,11 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Order'
+                type: object
+                properties:
+                  orderId:
+                    type: number
+                    example: 123
 
   /orders/{id}:
     get:
@@ -374,6 +448,13 @@ paths:
     post:
       tags:
         - payment
+      parameters:
+        - name: id
+          in: path
+          description: order id
+          required: true
+          schema:
+            type: string
       description: 'Payment'
       requestBody:
         content:
@@ -395,9 +476,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/User'
     post:
       tags:
         - profile
@@ -446,17 +525,21 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  url:
-                    type: string
-                    example: 'https://i.pravatar.cc/300'
+                $ref: '#/components/schemas/Image'
 
   /tags:
     get:
       tags:
         - tags
       description: 'Get tags'
+      parameters:
+        - name: category
+          in: query
+          description: categoryId
+          required: false
+          schema:
+            type: number
+            default: 123
       responses:
         '200':
           description: successful operation
@@ -490,15 +573,7 @@ components:
           type: string
           example: 'video card'
         image:
-          type: object
-          xml:
-            name: image
-          properties:
-            src:
-              type: string
-              example: '/3.svg'
-            alt:
-              type: string
+          $ref: '#/components/schemas/Image'
         subcategories:
           type: array
           xml:
@@ -515,15 +590,7 @@ components:
                 type: string
                 example: 'video card'
               image:
-                type: object
-                xml:
-                  name: image
-                properties:
-                  src:
-                    type: string
-                    example: '/3.svg'
-                  alt:
-                    type: string
+                $ref: '#/components/schemas/Image'
     Products:
       type: array
       items:
@@ -572,17 +639,13 @@ components:
           xml:
             wrapped: true
           items:
-            type: string
-            xml:
-              name: imageUrl
+            $ref: '#/components/schemas/Image'
         tags:
           type: array
           xml:
             wrapped: true
           items:
-            type: string
-            xml:
-              name: tagId
+            $ref: '#/components/schemas/Tag'
         reviews:
           type: integer
           example: 5
@@ -637,8 +700,8 @@ components:
         name: productFull
       properties:
         id:
-          type: string
-          example: '123'
+          type: number
+          example: 123
         category:
           type: number
           example: 55
@@ -738,9 +801,9 @@ components:
       xml:
         name: order
       properties:
-        orderId:
-          type: string
-          example: '123'
+        id:
+          type: number
+          example: 123
         createdAt:
           type: string
           example: '2023-05-05 12:12'
@@ -818,19 +881,29 @@ components:
           type: string
           example: '88002000600'
         avatar:
-          type: string
-          example: 'https://i.pravatar.cc/300'
+          $ref: '#/components/schemas/Image'
     Tag:
       type: object
       xml:
         name: tag
       properties:
         id:
-          type: string
-          example: 'gaming'
+          type: number
+          example: 12
         name:
           type: string
           example: 'Gaming'
+    Image:
+      type: object
+      xml:
+        name: image
+      properties:
+        src:
+          type: string
+          example: '/3.png'
+        alt:
+          type: string
+          example: 'Image alt string'
 
 
 
