# megano/api/urls.py
@@ -11,5 +11,14 @@ urlpatterns = [
     path('basket/', views.basket),
     path('orders/', views.orders),
     path('sign-in/', views.signIn),
+    path('sign-up/', views.signUp),
     path('sign-out/', views.signOut),
+    path('product/<int:id>/', views.product),
+    path('product/<int:id>/reviews/', views.productReviews),
+    path('tags/', views.tags),
+    path('profile/', views.profile),
+    path('profile/password/', views.profilePassword),
+    path('orders/', views.orders),
+    path('order/<int:id>/', views.order),
+    path('payment/<int:id>/', views.payment),
 ]
